compiler/src/test/resources/amyc/typer/passing/MatchWithError.amy
module Match2
  val a: Int = 1 match {
    case x => error("")
  };
  a
end Match2
