compiler/src/test/resources/amyc/typer/failing/MatchError1.amy
object MatchError
  1 match { case true => () }
end MatchError
